added welcome page

--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "e47145a5-c2b2-4957-8ce0-51c0fb1bf9a5",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
     }
    ],
    "source": [
-    "# install and import required dependencies\n",
+    "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present\n",
     "!echo \"Installation in progress...\"\n",
     "!conda install -y --quiet -c conda-forge \\\n",
     "    accelerate==0.23.0 \\\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "1abc93ee-117e-4d10-a97c-c26429b38159",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "fa2f29e9-cd41-4605-aafc-f5aaaf440469",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
     "        - model_id_or_path: The identifier or path of the pretrained model.\n",
     "        - torch_dtype: The data type to use in the model. Default is torch.bfloat16.\n",
     "        - optimize: If True, ipex is used to optimized the model\n",
-    "        \"\"\"'\n",
+    "        \"\"\"\n",
     "        self.torch_dtype = torch_dtype\n",
     "        self.device = select_device(\"xpu\")\n",
     "        if (\n",
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "42264502-ffdd-47e1-af1e-f7407c4b365f",
    "metadata": {},
    "outputs": [],
@@ -541,14 +541,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "b754474c-8a98-4d55-bb69-cd98a8c209e3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "deece7eddb9441de9f2edc95b3b1a009",
+       "model_id": "3cc2c9211b3c454c9ba52eac47230849",
        "version_major": 2,
        "version_minor": 0
       },
@@ -562,7 +562,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45305bced8e64122980de99a99d9dd52",
+       "model_id": "57e736a07e6a4b4faec798003a6214df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -576,7 +576,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb856e739aac4fa1901fc5524ea7f45e",
+       "model_id": "c341f2882410400fbebcc7201fe312ac",
        "version_major": 2,
        "version_minor": 0
       },
