--- a/welcome.ipynb
+++ b/welcome.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Welcome to the Gen AI Playground!\n",
     "\n",
-    "Hello there! We're excited to have you explore the wonders of generative AI. This playground is designed for everyone — from AI creators and artists to engineers and the just-plain curious. And the best part? It's all powered by [Intel® Data Center GPU Max 1100](https://www.intel.com/content/www/us/en/products/sku/232876/intel-data-center-gpu-max-1100/specifications.html)\n",
+    "Hello there! We're excited to have you explore the wonders of generative AI. This playground is designed for everyone — from AI creators and artists to engineers and the just-plain curious. And the best part? It's all powered by [Intel® Data Center GPU Max 1100](https://www.intel.com/content/www/us/en/products/sku/232876/intel-data-center-gpu-max-1100/specifications.html) .\n",
     "\n",
     "## What's Inside\n",
     "\n",
