tweak, added prefix to conda

--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -50,8 +50,9 @@
    ],
    "source": [
     "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present\n",
+    "import sys\n",
     "!echo \"Installation in progress...\"\n",
-    "!conda install -y --quiet -c conda-forge \\\n",
+    "!conda install -y --quiet --prefix {sys.prefix}  -c conda-forge \\\n",
     "    accelerate==0.23.0 \\\n",
     "    validators==0.22.0 \\\n",
     "    transformers==4.32.1 \\\n",
