--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "68c4ee2d-e6ca-4c63-b65c-340015386d87",
    "metadata": {},
    "outputs": [
@@ -46,8 +46,7 @@
      "output_type": "stream",
      "text": [
       "Installation in progress...\n",
-      "WARNING conda.models.version:get_matcher(548): Using .* with relational operator is superfluous and deprecated and will be removed in a future version of conda. Your spec was 1.7.1.*, but conda is ignoring the .* and treating it as 1.7.1\n",
-      "Installation successful\n"
+      "WARNING conda.models.version:get_matcher(548): Using .* with relational operator is superfluous and deprecated and will be removed in a future version of conda. Your spec was 1.7.1.*, but conda is ignoring the .* and treating it as 1.7.1\n"
      ]
     }
    ],
@@ -56,7 +55,7 @@
     "!echo \"Installation in progress...\"\n",
     "import sys\n",
     "!{sys.executable} -m pip install  invisible-watermark > /dev/null\n",
-    "!conda install -y --quiet -c conda-forge \\\n",
+    "!conda install -y --quiet --prefix {sys.prefix}  -c conda-forge \\\n",
     "    accelerate==0.23.0 \\\n",
     "    validators==0.22.0 \\\n",
     "    diffusers==0.18.2 \\\n",
