--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -667,10 +667,10 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
+    "name": "pytorch-gpu",
+    "language": "python",
+    "display_name": "PyTorch (GPU)"
+   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
