--- a/welcome.ipynb
+++ b/welcome.ipynb
@@ -41,10 +41,10 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
+    "name": "pytorch-gpu",
+    "language": "python",
+    "display_name": "PyTorch (GPU)"
+   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
