--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present\n",
+    "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
     "!echo \"Installation in progress...\"\n",
     "import sys\n",
     "!{sys.executable} -m pip install  invisible-watermark > /dev/null\n",
@@ -667,10 +667,10 @@
  ],
  "metadata": {
   "kernelspec": {
-    "name": "pytorch-gpu",
-    "language": "python",
-    "display_name": "PyTorch (GPU)"
-   },
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
