--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present\n",
+    "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
     "import sys\n",
     "!echo \"Installation in progress...\"\n",
     "!conda install -y --quiet  --prefix {sys.prefix} -c conda-forge \\\n",
@@ -614,10 +614,10 @@
  ],
  "metadata": {
   "kernelspec": {
-    "name": "pytorch-gpu",
-    "language": "python",
-    "display_name": "PyTorch (GPU)"
-   },
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
