updated ipynbs to use cache on idc

--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "raw",
    "id": "bab46b17-057c-4981-88d7-ee5373b20bca",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "SPDX-License-Identifier: Apache-2.0\n",
     "Copyright (c) 2023, Rahul Unnikrishnan Nair <rahul.unnikrishnan.nair@intel.com>"
@@ -40,35 +46,26 @@
    "execution_count": null,
    "id": "68c4ee2d-e6ca-4c63-b65c-340015386d87",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Installation in progress...\n",
-      "WARNING conda.models.version:get_matcher(548): Using .* with relational operator is superfluous and deprecated and will be removed in a future version of conda. Your spec was 1.7.1.*, but conda is ignoring the .* and treating it as 1.7.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
-    "!echo \"Installation in progress...\"\n",
-    "import sys\n",
-    "!{sys.executable} -m pip install  invisible-watermark > /dev/null\n",
-    "!conda install -y --quiet --prefix {sys.prefix}  -c conda-forge \\\n",
-    "    accelerate==0.23.0 \\\n",
-    "    validators==0.22.0 \\\n",
-    "    diffusers==0.18.2 \\\n",
-    "    transformers==4.32.1 \\\n",
-    "    tensorboardX \\\n",
-    "    pillow \\\n",
-    "    ipywidgets \\\n",
-    "    ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\""
+    "# # Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
+    "# !echo \"Installation in progress...\"\n",
+    "# import sys\n",
+    "# !{sys.executable} -m pip install  invisible-watermark > /dev/null\n",
+    "# !conda install -y --quiet --prefix {sys.prefix}  -c conda-forge \\\n",
+    "#     accelerate==0.23.0 \\\n",
+    "#     validators==0.22.0 \\\n",
+    "#     diffusers==0.18.2 \\\n",
+    "#     transformers==4.32.1 \\\n",
+    "#     tensorboardX \\\n",
+    "#     pillow \\\n",
+    "#     ipywidgets \\\n",
+    "#     ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0fe0f41a-baea-4cdf-ac53-be8700eea3e0",
    "metadata": {},
    "outputs": [],
@@ -130,9 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "31324959-3ade-40d7-bbf5-feb885d931f4",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [],
@@ -191,7 +192,7 @@
     "            StableDiffusionImg2ImgPipeline: The loaded pipeline.\n",
     "        \"\"\"\n",
     "        print(\"Loading the model...\")\n",
-    "        model_path = Path(f\"./models/{model_id_or_path}\")  # models will be saved to `./models/`\n",
+    "        model_path = Path(f\"/home/common/data/Big_Data/GenAI/{model_id_or_path}\")\n",
     "        \n",
     "        if model_path.exists():\n",
     "            print(f\"Loading the model from {model_path}...\")\n",
@@ -312,7 +313,7 @@
     "        num_inference_steps: int = 30,\n",
     "        strength: float = 0.75,\n",
     "        guidance_scale: float = 7.5,\n",
-    "        save_path: str = \"output\",\n",
+    "        save_path: str = \"image_to_image\",\n",
     "        batch_size: int = 1,\n",
     "    ):\n",
     "        \"\"\"\n",
@@ -326,7 +327,7 @@
     "            num_inference_steps (int, optional): Number of noise removal steps.\n",
     "            strength (float, optional): The strength of the transformation. Defaults to 0.75.\n",
     "            guidance_scale (float, optional): The scale of the guidance. Defaults to 7.5.\n",
-    "            save_path (str, optional): The path to save the generated images. Defaults to \"output\".\n",
+    "            save_path (str, optional): The path to save the generated images. Defaults to \"image_to_image\".\n",
     "\n",
     "        \"\"\"\n",
     "        input_image_path = \"input.png\"\n",
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e012d657-7fe4-426e-bdeb-033701a38a52",
    "metadata": {
     "tags": []
@@ -414,7 +415,7 @@
     "\n",
     "def image_to_image():\n",
     "    out = widgets.Output()\n",
-    "    output_dir = \"output\"\n",
+    "    image_to_image_dir = \"image_to_image\"\n",
     "    num_images = 2\n",
     "    model_ids = [\n",
     "        \"runwayml/stable-diffusion-v1-5\",\n",
@@ -461,7 +462,7 @@
     "    def on_submit(button):\n",
     "        clear_output(wait=True)\n",
     "        with out:\n",
-    "            print(\"Generating Images, once generated images will be saved `./output` dir, please wait...\")\n",
+    "            print(\"Generating Images, once generated images will be saved `./image_to_image` dir, please wait...\")\n",
     "            selected_model_index = model_ids.index(model_dropdown.value)\n",
     "            model_id = model_ids[selected_model_index]\n",
     "            prompt = prompt_text.value\n",
@@ -498,7 +499,7 @@
     "                print(f\"Using enhanced prompt: {prompt}\")    \n",
     "            try:\n",
     "                start_time = time.time()\n",
-    "                os.makedirs(output_dir, exist_ok=True)\n",
+    "                os.makedirs(image_to_image_dir, exist_ok=True)\n",
     "                model.generate_images(\n",
     "                    prompt=prompt,\n",
     "                    image_url=image_url,\n",
@@ -515,8 +516,8 @@
     "                print(status)\n",
     "    button.on_click(on_submit)\n",
     "\n",
-    "def display_generated_images(output_dir=\"output\"):\n",
-    "    image_files = [f for f in os.listdir(output_dir) if f.endswith((\".png\", \".jpg\"))]    \n",
+    "def display_generated_images(image_to_image_dir=\"image_to_image\"):\n",
+    "    image_files = [f for f in os.listdir(image_to_image_dir) if f.endswith((\".png\", \".jpg\"))]    \n",
     "    num_images = len(image_files)\n",
     "    grid_size = int(np.ceil(np.sqrt(num_images)))\n",
     "    fig, axs = plt.subplots(grid_size, grid_size, figsize=(15, 15))    \n",
@@ -525,7 +526,7 @@
     "    elif grid_size == 1:\n",
     "        axs = np.array([axs])\n",
     "    for ax, image_file in zip(axs.ravel(), image_files):\n",
-    "        img = mp_img.imread(os.path.join(output_dir, image_file))\n",
+    "        img = mp_img.imread(os.path.join(image_to_image_dir, image_file))\n",
     "        ax.imshow(img)\n",
     "        ax.axis(\"off\")  # Hide axes\n",
     "    for ax in axs.ravel()[num_images:]:\n",
@@ -556,53 +557,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "39941920-7519-4dd3-8e59-37c8f1389dd1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37f06a9207a74c05a2f1a7ef54956ce7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(Dropdown(description='Select Model:', options=('runwayml/stable-diffusion-v1-5',…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
     },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f378b3dca28e43e4be4e2846bb5e672d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Generate Images!', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14e4008893914d44994edfee44033555",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "image_to_image()"
    ]
@@ -667,9 +631,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pytorch-gpu",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch-gpu"
   },
   "language_info": {
    "codemirror_mode": {
