--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -34,37 +34,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e47145a5-c2b2-4957-8ce0-51c0fb1bf9a5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Installation in progress...\n",
-      "WARNING conda.models.version:get_matcher(548): Using .* with relational operator is superfluous and deprecated and will be removed in a future version of conda. Your spec was 1.7.1.*, but conda is ignoring the .* and treating it as 1.7.1\n",
-      "Installation successful\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
-    "import sys\n",
-    "!echo \"Installation in progress...\"\n",
-    "!conda install -y --quiet --prefix {sys.prefix}  -c conda-forge \\\n",
-    "    accelerate==0.23.0 \\\n",
-    "    validators==0.22.0 \\\n",
-    "    transformers==4.32.1 \\\n",
-    "    sentencepiece \\\n",
-    "    pillow \\\n",
-    "    ipywidgets \\\n",
-    "    ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\""
+    "#import sys\n",
+    "#!echo \"Installation in progress...\"\n",
+    "#!conda install -y --quiet --prefix {sys.prefix}  -c conda-forge \\\n",
+    "#    accelerate==0.23.0 \\\n",
+    "#    validators==0.22.0 \\\n",
+    "#    transformers==4.32.1 \\\n",
+    "#    sentencepiece \\\n",
+    "#    pillow \\\n",
+    "#    ipywidgets \\\n",
+    "#    ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1abc93ee-117e-4d10-a97c-c26429b38159",
    "metadata": {},
    "outputs": [],
@@ -171,9 +161,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "fa2f29e9-cd41-4605-aafc-f5aaaf440469",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "class ChatBotModel:\n",
@@ -221,14 +217,14 @@
     "                    model_id_or_path,\n",
     "                    low_cpu_mem_usage=True,\n",
     "                    torch_dtype=self.torch_dtype,\n",
-    "                    cache_dir=\"./llm/models\",\n",
+    "                    cache_dir=\"/home/common/data/Big_Data/GenAI\",\n",
     "                )\n",
     "                .to(self.device)\n",
     "                .eval()\n",
     "            )\n",
     "        else:\n",
     "            self.tokenizer = AutoTokenizer.from_pretrained(\n",
-    "                model_id_or_path, trust_remote_code=True, cache_dir=\"./llm/models\"\n",
+    "                model_id_or_path, trust_remote_code=True, cache_dir=\"/home/common/data/Big_Data/GenAI/\"\n",
     "            )\n",
     "            self.model = (\n",
     "                AutoModelForCausalLM.from_pretrained(\n",
@@ -236,7 +232,7 @@
     "                    low_cpu_mem_usage=True,\n",
     "                    trust_remote_code=True,\n",
     "                    torch_dtype=self.torch_dtype,\n",
-    "                    cache_dir=\"./llm/models\",\n",
+    "                    cache_dir=\"/home/common/data/Big_Data/GenAI/\",\n",
     "                )\n",
     "                .to(self.device)\n",
     "                .eval()\n",
@@ -454,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "42264502-ffdd-47e1-af1e-f7407c4b365f",
    "metadata": {},
    "outputs": [],
@@ -542,53 +538,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b754474c-8a98-4d55-bb69-cd98a8c209e3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cc2c9211b3c454c9ba52eac47230849",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(Dropdown(description='Model:', options=('openlm-research/open_llama_3b_v2', 'Wri…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
     },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57e736a07e6a4b4faec798003a6214df",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Start Interaction!', layout=Layout(margin='0 auto'), style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c341f2882410400fbebcc7201fe312ac",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "main()"
    ]
@@ -659,9 +618,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pytorch-gpu",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch-gpu"
   },
   "language_info": {
    "codemirror_mode": {
