--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "raw",
    "id": "ca7ac3ac-5154-4082-a8a5-426b4a970eff",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "SPDX-License-Identifier: Apache-2.0\n",
     "Copyright (c) 2023, Rahul Unnikrishnan Nair <rahul.unnikrishnan.nair@intel.com>"
@@ -35,37 +41,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "791c50f9-4524-4410-8ff9-2c55dc674950",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Installation in progress...\n",
-      "WARNING conda.models.version:get_matcher(548): Using .* with relational operator is superfluous and deprecated and will be removed in a future version of conda. Your spec was 1.7.1.*, but conda is ignoring the .* and treating it as 1.7.1\n",
-      "Installation successful\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
+    "# # Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
+    "# #import sys\n",
+    "# !echo \"Installation in progress...\"\n",
+    "# !conda install -y --quiet  --prefix {sys.prefix} -c conda-forge \\\n",
+    "#     accelerate==0.23.0 \\\n",
+    "#     validators==0.22.0 \\\n",
+    "#     diffusers==0.18.2 \\\n",
+    "#     transformers==4.32.1 \\\n",
+    "#     pillow \\\n",
+    "#     ipywidgets \\\n",
+    "#     ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\"\n",
     "import sys\n",
-    "!echo \"Installation in progress...\"\n",
-    "!conda install -y --quiet  --prefix {sys.prefix} -c conda-forge \\\n",
-    "    accelerate==0.23.0 \\\n",
-    "    validators==0.22.0 \\\n",
-    "    diffusers==0.18.2 \\\n",
-    "    transformers==4.32.1 \\\n",
-    "    pillow \\\n",
-    "    ipywidgets \\\n",
-    "    ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\""
+    "!{sys.executable} -m pip install invisible-watermark --user > /dev/null && echo \"Installation successful\" || echo \"Installation failed\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ee25d6c0-1c17-4497-bd74-f7795887d7e2",
    "metadata": {},
    "outputs": [],
@@ -120,9 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "be12d985-31b5-4a03-b976-74787558fc0f",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "class Text2ImgModel:\n",
@@ -190,7 +194,7 @@
     "        \"\"\"\n",
     "\n",
     "        print(\"Loading the model...\")\n",
-    "        model_path = Path(f\"./models/{model_id_or_path}\")  # models will be saved to `./models/`\n",
+    "        model_path = Path(f\"/home/common/data/Big_Data/GenAI/{model_id_or_path}\")  \n",
     "        \n",
     "        if model_path.exists():\n",
     "            print(f\"Loading the model from {model_path}...\")\n",
@@ -339,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0f41a449-ae30-4853-a2b5-d34b6cbdbc9a",
    "metadata": {},
    "outputs": [],
@@ -497,53 +501,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "df8d6b65-39b9-4472-b6a6-878e4c2cefdc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1e3880d6abd41f487e9ba3d9fd7b104",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(Dropdown(description='Select Model:', options=('CompVis/stable-diffusion-v1-4', …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
     },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3f562a86e694ef4b41fbe53184accbd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Generate Images!', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b709bbe79ffc4e06bc1cee3b12a324dd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "prompt_to_image()"
    ]
@@ -614,9 +581,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pytorch-gpu",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch-gpu"
   },
   "language_info": {
    "codemirror_mode": {
