--- a/welcome.ipynb
+++ b/welcome.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "813ea3f6-812d-416f-8410-db34c5c2e414",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Welcome to the Gen AI Playground!\n",
     "\n",
@@ -41,10 +47,10 @@
  ],
  "metadata": {
   "kernelspec": {
-    "name": "pytorch-gpu",
-    "language": "python",
-    "display_name": "PyTorch (GPU)"
-   },
+   "display_name": "pytorch-gpu",
+   "language": "python",
+   "name": "pytorch-gpu"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
